@@ -73,6 +73,7 @@ class graphics
   static void SetSRegionDrawAfterFelist(int iIndex, bool b);
   static void SetSRegionDrawBeforeFelistPage(int iIndex, bool, bool);
   static void SetSRegionDrawRectangleOutline(int iIndex, bool b);
+  static void SetSRegionSrcBitmapOverride(int iIndex, bitmap* bmp, int iStretch, v2 v2Dest);
   static void SetSRegionListItem(int iIndex);
   static int  SetSRegionBlitdata(int iIndex, blitdata B);
   static void SetSRegionClearSquaresAt(int iIndex, v2 v2Size, std::vector<v2> vv2);
